added notes for bias variance decomposition

--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -45,7 +45,7 @@
       "    in the real world, the noise on more extreme measurements is often \n",
       "    greater\n",
       "  \n",
-      "    $y_i \\sim N(wx_i, \\sigma_i^2)$  <- note how sigma changes with $i$\n",
+      "$y_i \\sim N(wx_i, \\sigma_i^2)$  <- note how sigma changes with $i$\n",
       "  \n",
       "Sometimes we know something about the noise, and then we can use\n",
       "different sigmas at each point, assume independence among noise,\n",
@@ -73,7 +73,6 @@
       "    It is _linear_\n",
       "\n",
       "We make a new variable:\n",
-      "  $z = $  \n",
       "    \n",
       "    z = [1 x_1^2 \n",
       "         1 x_2^2\n",
@@ -81,12 +80,13 @@
       "         1 x_n^2 ]\n",
       "    \n",
       "Now:\n",
-      "    $\\hat{y} = zw$  \n",
-      "    and it is linear (linear in weights)  \n",
-      "    $w = w \\sin(x)$ <- linear estimation  \n",
-      "      $\\sin(x)$ is a transformed feature, but still a feature  \n",
-      "      w is still linear  \n",
-      "    $y = \\sin(wx)$ <- nonlinear estimation  \n",
+      "    $\\hat{y} = zw$ and it is linear (linear in weights)  \n",
+      "    \n",
+      "* $w = w \\sin(x)$ <- linear estimation  \n",
+      "      * $\\sin(x)$ is a transformed feature, but still a feature  \n",
+      "      * $w$ is still linear  \n",
+      "        \n",
+      "$y = \\sin(wx)$ <- nonlinear estimation  \n",
       "\n",
       "\n",
       " Radial Basis Functions (RBF)\n",
